--- a/SDL_PixelFormat.mediawiki
+++ b/SDL_PixelFormat.mediawiki
@@ -9,12 +9,15 @@ A structure that contains pixel format information.
 {|
 |[[SDL_Palette]]*
 |'''palette'''
+|a palette associated with this pixel format
 |-
 |Uint8
 |'''Bits<code></code>Per<code></code>Pixel'''
+|the number of significant bits in a pixel value, eg: 8, 15, 16, 24, 32
 |-
 |Uint8
 |'''Bytes<code></code>Per<code></code>Pixel'''
+|the number of bytes required to hold a pixel value, eg: 1, 2, 3, 4
 |-
 |Uint8
 |'''Rloss'''
@@ -64,18 +67,33 @@ You can add your code example here
 == Remarks ==
 Everything in the pixel format structure is read-only.
 
-== Related Structures ==
-:[[SDL_Palette]]
+The data types used to represent pixels are as follows:
+{|
+|__Bytes Per Pixel__
+|__Type__
+|-
+|1
+|Uint8
+|-
+|2
+|Uint16
+|-
+|3
+|couple of Uint8 RGB values
+|-
+|4
+|Uint32
+|}
 
-== Related Enumerations ==
-:[[SDL_PixelFormatEnum]]???
+== Related Structures ==
+:[[SDL_Surface]]
 
 == Related Functions ==
+:[[SDL_ConvertSurface]]
 :[[SDL_GetRGB]]
 :[[SDL_GetRGBA]]
 :[[SDL_MapRGB]]
 :[[SDL_MapRGBA]]
-:[[SDL_PixelFormatEnumToMasks]]???
 
 ----
 [[CategoryStruct]]
