--- a/SDL_PixelFormat.mediawiki
+++ b/SDL_PixelFormat.mediawiki
@@ -17,34 +17,43 @@ A structure that contains pixel format information.
 |-
 |Uint8
 |'''Bytes<code></code>Per<code></code>Pixel'''
-|the number of bytes required to hold a pixel value, eg: 1, 2, 3, 4
+|the number of bytes required to hold a pixel value, eg: 1, 2, 3, 4; see [[#bytesperpixel|Remarks]] for related data type
 |-
-|Uint8
-|'''Rloss'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Rloss'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Gloss'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Gloss'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Bloss'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Bloss'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Aloss'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Aloss'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Rshift'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Rshift'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Gshift'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Gshift'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Bshift'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Bshift'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Bshift'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Bshift'''
+|<style="color: #808080;">(internal use)
 |-
-|Uint8
-|'''Ashift'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''Ashift'''
+|<style="color: #808080;">(internal use)
 |-
 |Uint32
 |'''Rmask'''
@@ -67,7 +76,7 @@ You can add your code example here
 == Remarks ==
 Everything in the pixel format structure is read-only.
 
-The data types used to represent pixels are as follows:
+<span id="bytesperpixel"></span> The data types used to represent pixels are as follows:
 {|
 |__Bytes Per Pixel__
 |__Type__
