--- a/SDL_PixelFormat.mediawiki
+++ b/SDL_PixelFormat.mediawiki
@@ -57,15 +57,19 @@ A structure that contains pixel format information.
 |-
 |Uint32
 |'''Rmask'''
+|a mask representing the location of the red component of the pixel
 |-
 |Uint32
 |'''Gmask'''
+|a mask representing the location of the green component of the pixel
 |-
 |Uint32
 |'''Bmask'''
+|a mask representing the location of the blue component of the pixel
 |-
 |Uint32
 |'''Amask'''
+|a mask representing the location of the alpha component of the pixel or 0 if the pixel doesn't have any alpha information
 |}
 
 == Code Examples ==
@@ -76,10 +80,12 @@ You can add your code example here
 == Remarks ==
 Everything in the pixel format structure is read-only.
 
+A pixel format has either a palette or masks.  If a palette is used '''Rmask''', '''Gmask''', '''Bmask''', and '''Amask''' will be 0.  
+
 <span id="bytesperpixel"></span> The data types used to represent pixels are as follows:
 {|
 |__Bytes Per Pixel__
-|__Type__
+|__Related Data Types__
 |-
 |1
 |Uint8
