--- a/SDL_PixelFormat.mediawiki
+++ b/SDL_PixelFormat.mediawiki
@@ -69,7 +69,7 @@ A structure that contains pixel format information.
 |-
 |Uint32
 |'''Amask'''
-|a mask representing the location of the alpha component of the pixel or 0 if the pixel doesn't have any alpha information
+|a mask representing the location of the alpha component of the pixel or 0 if the pixel format doesn't have any alpha information
 |}
 
 == Code Examples ==
