--- a/SDL_GetNumVideoDisplays.mediawiki
+++ b/SDL_GetNumVideoDisplays.mediawiki
@@ -23,7 +23,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_GetCurrentVideoDisplay]]
-:[[GetDisplayBounds]]
+:[[SDL_GetDisplayBounds]]
 :[[SDL_SelectVideoDisplay]]
 
 ----
