--- a/SDL_RenderDrawRect.mediawiki
+++ b/SDL_RenderDrawRect.mediawiki
@@ -28,6 +28,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_RenderLines]]???
+:[[SDL_RenderPoints]]???
 :[[SDL_RenderRects]]???
 
 ----
