--- a/SDL_RenderDrawRects.mediawiki
+++ b/SDL_RenderDrawRects.mediawiki
@@ -34,6 +34,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_RenderLines]]???
+:[[SDL_RenderPoints]]???
 :[[SDL_RenderRect]]???
 
 ----
