--- a/SDL_RenderDrawRects.mediawiki
+++ b/SDL_RenderDrawRects.mediawiki
@@ -34,7 +34,9 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_RenderLine]]???
 :[[SDL_RenderLines]]???
+:[[SDL_RenderPoint]]???
 :[[SDL_RenderPoints]]???
 :[[SDL_RenderRect]]???
 
