--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -59,23 +59,29 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 
 === Audio format flags ===
 {|
-|AUDIO_U8
-|unsigned 8-bit samples
-|-
 |AUDIO_S8
 |signed 8-bit samples
 |-
-|AUDIO_U16LSB
-|unsigned 16-bit samples
+|AUDIO_U8
+|unsigned 8-bit samples
 |-
 |AUDIO_S16LSB
-|signed 16-bit samples
-|-
-|AUDIO_U16MSB
-|as above, but big-endian byte order
+|signed 16-bit samples in little-endian order
 |-
 |AUDIO_S16MSB
-|as above, but big-endian byte order
+|signed 16-bit samples int big-endian byte order
+|-
+|AUDIO_S16SYS
+|signed 16-bit samples in native byte order
+|-
+|AUDIO_U16LSB
+|unsigned 16-bit samples in little-endian order
+|-
+|AUDIO_U16MSB
+|unsigned 16-bit samples in big-endian byte order
+|-
+|AUDIO_U16SYS
+|unsigned 16-bit samples in native byte order
 |-
 |AUDIO_U16
 |AUDIO_U16LSB
@@ -83,7 +89,6 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |AUDIO_S16
 |AUDIO_S16LSB
 |}
-Defaults to LSB byte order.
 
 === int32 support ===
 (New to SDL 1.3)
@@ -114,13 +119,9 @@ Defaults to LSB byte order.
 === Native audio byte ordering ===
 ```
 #if SDL_BYTEORDER == SDL_LIL_ENDIAN
-#define AUDIO_U16SYS AUDIO_U16LSB
-#define AUDIO_S16SYS AUDIO_S16LSB
 #define AUDIO_S32SYS AUDIO_S32LSB
 #define AUDIO_F32SYS AUDIO_F32LSB
 #else
-#define AUDIO_U16SYS AUDIO_U16MSB
-#define AUDIO_S16SYS AUDIO_S16MSB
 #define AUDIO_S32SYS AUDIO_S32MSB
 #define AUDIO_F32SYS AUDIO_F32MSB
 #endif
