--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -21,10 +21,8 @@ These are what the 16 bits in [[SDL_AudioFormat]] currently mean:
 ```
 Unspecified bits are always zero.  There are macros in SDL 1.3 and later to query these bits. 
 
+=== Audio Format Macros ===
 {|
-|
-|<(>'''audio format macros'''
-|-
 |SDL_AUDIO_MASK_BITSIZE
 |(0xFF)
 |-
@@ -60,10 +58,8 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |}
 
 
+=== Audio Format Values ===
 {|
-|
-|<(> '''audio format values'''
-|-
 |
 |<(>8-bit support
 |-
