--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -61,7 +61,7 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 === Audio Format Values ===
 {|
 |
-|<(>8-bit support
+|<(>'''8-bit support'''
 |-
 |AUDIO_S8
 |signed 8-bit samples
@@ -70,7 +70,7 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |unsigned 8-bit samples
 |-
 |
-|<(>16-bit support
+|<(>'''16-bit support'''
 |-
 |AUDIO_S16LSB
 |signed 16-bit samples in little-endian byte order
@@ -97,7 +97,7 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |AUDIO_U16LSB
 |-
 |
-|<(>32-bit support (New to SDL 1.3)
+|<(>'''32-bit support''' (New to SDL 1.3)
 |-
 |AUDIO_S32LSB
 |32-bit integer samples in little-endian byte order
@@ -112,7 +112,7 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |AUDIO_S32LSB
 |-
 |
-|<(>float support (New to SDL 1.3)
+|<(>'''float support''' (New to SDL 1.3)
 |-
 |AUDIO_F32LSB
 |32-bit floating point samples in little-endian byte order
