--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_AudioFormat =
-A typedef that contains audio format data and flags.
+An enumeration of audio formats.
 
 
 == Values ==
