--- a/SDL_AudioStatus.mediawiki
+++ b/SDL_AudioStatus.mediawiki
@@ -2,19 +2,16 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_AudioStatus =
-An enumeration that gets the current audio state.
+An enumeration of audio device states.
 
 
 == Values ==
 {|
 |SDL_AUDIO_STOPPED
-|= 0
 |-
 |SDL_AUDIO_PLAYING
-|
 |-
 |SDL_AUDIO_PAUSED
-|
 |}
 
 == Code Examples ==
