--- a/SDL_BlendMode.mediawiki
+++ b/SDL_BlendMode.mediawiki
@@ -1,7 +1,7 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
 
-= SDL_Enumeration =
+= SDL_BlendMode =
 An enumeration that sets the blend mode used in [[SDL_RenderCopy]]() and drawing operations.
 
 
