--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -34,7 +34,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-The texture is blended with the destination based on the bland mode set with [[SDL_SetTextureBlendMode]]().
+The texture is blended with the destination based on the blend mode set with [[SDL_SetTextureBlendMode]]().
 <span id="textureID"></span> The texture channel modulation is provided by the enumeration [[SDL_TextureModulate]] using these flags:
 <<Include(SDL_TextureModulate, , , from="== Values ==", to="== Code Examples ==")>>
 
