--- a/SDL_SetTextureBlendMode.mediawiki
+++ b/SDL_SetTextureBlendMode.mediawiki
@@ -29,7 +29,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-<span id="blendMode"></span><<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
+<span id="blendMode"></span> '''blendMode''' can be one of these values:
+<<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
+
 If the blend mode is not supported, the closest supported mode is chosen.
 
 == Related Functions ==
