--- a/SDL_SetTextureBlendMode.mediawiki
+++ b/SDL_SetTextureBlendMode.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_SetTextureBlendMode =
-Use this function to set the blend mode used by [[SDL_RenderCopy]]().
+Use this function to set the blend mode for a texture, used by [[SDL_RenderCopy]]().
 
 
 == Syntax ==
