--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -8,23 +8,20 @@ An enumeration of pixel formats.
 == Values ==
 === Pixel Format Macros ===
 {|
-|SDL_PIXELTYPE(X)
-|(((X) >> 24) & 0x0F)
-|returns the type of the pixel format; see [[#type|Remarks]] for details
+|SDL_PIXELTYPE(format)
+|the type of the pixel format; see [[#type|Remarks]] for details
 |-
-|SDL_PIXELORDER(X)
-|(((X) >> 20) & 0x0F)
+|SDL_PIXELORDER(format)
 |the ordering of channels or bits in the pixel format; see [[#order|Remarks]] for details
 |-
-|SDL_PIXELLAYOUT(X)
-|(((X) >> 16) & 0x0F)
+|SDL_PIXELLAYOUT(format)
 |the channel bit pattern of the pixel format; see [[#layout|Remarks]] for details
 |-
-|SDL_BITSPERPIXEL(X)
-|(((X) >> 8) & 0xFF)
+|SDL_BITSPERPIXEL(format)
+|
 |-
-|SDL_BYTESPERPIXEL(X)
-|(((X) >> 0) & 0xFF)
+|SDL_BYTESPERPIXEL(format)
+|
 |-
 |SDL_ISPIXELFORMAT_INDEXED(format)
 |
@@ -162,9 +159,75 @@ You can add your code example here
 |SDL_PIXELTYPE_ARRAYF32
 |}
 
-<span id="order"></span> 
+<span id="order"></span> Depending on the pixel type there are three different types of orderings - bitmapped, packed, or array.
+{|
+|Bitmap pixel order, high bit -> low bit.
+|-
+|SDL_BITMAPORDER_NONE
+|-
+|SDL_BITMAPORDER_4321
+|-
+|SDL_BITMAPORDER_1234
+|-
+|Packed component order, high bit -> low bit.
+|-
+|SDL_PACKEDORDER_NONE
+|-
+|SDL_PACKEDORDER_XRGB
+|-
+|SDL_PACKEDORDER_RGBX
+|-
+|SDL_PACKEDORDER_ARGB
+|-
+|SDL_PACKEDORDER_RGBA
+|-
+|SDL_PACKEDORDER_XBGR
+|-
+|SDL_PACKEDORDER_BGRX
+|-
+|SDL_PACKEDORDER_ABGR
+|-
+|SDL_PACKEDORDER_BGRA
+|-
+|Array component order, low byte -> high byte.
+|-
+|SDL_ARRAYORDER_NONE
+|-
+|SDL_ARRAYORDER_RGB
+|-
+|SDL_ARRAYORDER_RGBA
+|-
+|SDL_ARRAYORDER_ARGB
+|-
+|SDL_ARRAYORDER_BGR
+|-
+|SDL_ARRAYORDER_BGRA
+|-
+|SDL_ARRAYORDER_ABGR
+|}
 
-<span id="layout"></span> 
+<span id="layout"></span> Packed pixel formats have one of the following layouts:
+{|
+|SDL_PACKEDLAYOUT_NONE
+|-
+|SDL_PACKEDLAYOUT_332
+|-
+|SDL_PACKEDLAYOUT_4444
+|-
+|SDL_PACKEDLAYOUT_1555
+|-
+|SDL_PACKEDLAYOUT_5551
+|-
+|SDL_PACKEDLAYOUT_565
+|-
+|SDL_PACKEDLAYOUT_8888
+|-
+|SDL_PACKEDLAYOUT_2101010
+|-
+|SDL_PACKEDLAYOUT_1010102
+|}
+
+Channel ordering with SDL_<code></code>PIXELORDER and component layout using SDL_<code></code>PIXELLAYOUT together completely defines a pixel format.
 
 == Related Structures ==
 :[[SDL_DisplayMode]]
