--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -161,7 +161,7 @@ You can add your code example here
 
 <span id="order"></span> Depending on the pixel type there are three different types of orderings - bitmapped, packed, or array.
 {|
-|'''Bitmap pixel order''' = high bit -> low bit
+|'''Bitmap pixel order''' (high bit -> low bit)
 |-
 |SDL_BITMAPORDER_NONE
 |-
@@ -189,7 +189,7 @@ You can add your code example here
 |-
 |SDL_PACKEDORDER_BGRA
 |-
-|'''Array component order, low byte -> high byte'''
+|'''Array component order""" (low byte -> high byte)
 |-
 |SDL_ARRAYORDER_NONE
 |-
