--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -38,7 +38,7 @@ You can add your code example here
 
 == Remarks ==
 <span id="format"></span> '''format''' can be one of these values:
-<<Include(SDL_PixelFormatEnum, , , from="== Values ==", to="== Code Examples ==")>>
+<<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 <span id="access"></span> '''access''' can be one of these values:
 <<Include(SDL_TextureAccess, , , from="== Values ==", to="== Code Examples ==")>>
