--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -1,6 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-
+'''DRAFT'''
 = SDL_Enumeration =
 An enumeration of ''replace with description of the enum''.
 
