added DRAFT to top for removal after page is edited

--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -1,6 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-
+'''DRAFT'''
 = SDL_FunctionName =
 Use this function to ''insert short function description here''.
 
