--- a/SDL_RenderDrawRect.mediawiki
+++ b/SDL_RenderDrawRect.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_RenderRect =
 Use this function to fill the current rendering target with the drawing color.
