--- a/SDL_RenderDrawLine.mediawiki
+++ b/SDL_RenderDrawLine.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_RenderLine =
 Use this function to draw a line on the current rendering target.
