--- a/SDL_RenderDrawLines.mediawiki
+++ b/SDL_RenderDrawLines.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_RenderLines =
 Use this function to draw a series of connected lines on the current rendering target.
