added DRAFT to top for removal after page is edited

--- a/SDL_RenderDrawPoints.mediawiki
+++ b/SDL_RenderDrawPoints.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_RenderPoints =
 Use this function to draw some number of points on the current rendering target.
