--- a/SDL_RenderPresent.mediawiki
+++ b/SDL_RenderPresent.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_RenderPresent =
 Use this function to update the screen with rendering performed.
