--- a/SDL_GetDisplayBounds.mediawiki
+++ b/SDL_GetDisplayBounds.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GetDisplayBounds =
 Use this function to get the desktop area represented by a display, with the primary display located at 0,0.
