--- a/SDL_RenderReadPixels.mediawiki
+++ b/SDL_RenderReadPixels.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_RenderReadPixels =
 Use this function to read pixels from the current rendering target.
