--- a/SDL_RenderReadPixels.mediawiki
+++ b/SDL_RenderReadPixels.mediawiki
@@ -22,7 +22,7 @@ int SDL_RenderReadPixels(const SDL_Rect* rect,
 |a pointer to the [[SDL_Rect]] to read, or NULL for the entire render target
 |-
 |'''format'''
-|the desired format of the pixel data, or 0 to use the format of the rendering target
+|the desired format of the pixel data, or 0 to use the format of the rendering target; see [[#format|Remarks]] for details
 |-
 |'''pixels'''
 |a pointer to be filled in with the pixel data
@@ -41,6 +41,9 @@ You can add your code example here
 
 == Remarks ==
 WARNING: This is a very slow operation, and should not be used frequently. 
+
+<span id="format"></span> The '''format''' parameter may be filled with any of the following values:
+<<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_RenderWritePixels]]???
