added DRAFT to top for removal after page is edited

--- a/SDL_GL_GetAttribute.mediawiki
+++ b/SDL_GL_GetAttribute.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GL_GetAttribute =
 Use this function to get the actual value for an attribute from the current context.
