--- a/SDL_RenderReadPixels.mediawiki
+++ b/SDL_RenderReadPixels.mediawiki
@@ -42,7 +42,7 @@ You can add your code example here
 == Remarks ==
 WARNING: This is a very slow operation, and should not be used frequently. 
 
-<span id="format"></span> The '''format''' parameter may be filled with any of the following values:
+<span id="format"></span> '''format''' can be one of these values:
 <<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
