--- a/SDL_GetRenderDriverInfo.mediawiki
+++ b/SDL_GetRenderDriverInfo.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GetRenderDriverInfo =
 Use this function to get information about a specific 2D rendering driver for the current display.
