added DRAFT to top for removal after page is edited

--- a/SDL_GetNumRenderDrivers.mediawiki
+++ b/SDL_GetNumRenderDrivers.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GetNumRenderDrivers =
 Use this function to get the number of 2D rendering drivers available for the current display.
