--- a/SDL_GetAudioDeviceStatus.mediawiki
+++ b/SDL_GetAudioDeviceStatus.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GetAudioDeviceStatus =
 Use this function to get the current audio state of an audio device.
