added DRAFT to top for removal after page is edited

--- a/SDL_UnlockTexture.mediawiki
+++ b/SDL_UnlockTexture.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_UnlockTexture =
 Use this function to unlock a texture, uploading the changes to video memory, if needed.
