--- a/SDL_GetNumVideoDrivers.mediawiki
+++ b/SDL_GetNumVideoDrivers.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GetNumVideoDrivers =
 Use this function to get the number of video drivers compiled into SDL.
