added DRAFT to top for removal after page is edited

--- a/SDL_GetNumDisplayModes.mediawiki
+++ b/SDL_GetNumDisplayModes.mediawiki
@@ -1,5 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
+|}
 
 = SDL_GetNumDisplayModes =
 Use this function to return the number of available display modes for the current display.
