--- a/SDL_RenderDrawPoint.mediawiki
+++ b/SDL_RenderDrawPoint.mediawiki
@@ -35,11 +35,11 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_RenderLine]]???
-:[[SDL_RenderLines]]???
-:[[SDL_RenderPoints]]???
-:[[SDL_RenderRect]]???
-:[[SDL_RenderRects]]???
+:[[SDL_RenderDrawLine]]???
+:[[SDL_RenderDrawLines]]???
+:[[SDL_RenderDrawPoints]]???
+:[[SDL_RenderDrawRect]]???
+:[[SDL_RenderDrawRects]]???
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
