--- a/SDL_RenderDrawPoints.mediawiki
+++ b/SDL_RenderDrawPoints.mediawiki
@@ -4,14 +4,14 @@
 |<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
 |}
 
-= SDL_RenderPoints =
+= SDL_RenderDrawPoints =
 Use this function to draw some number of points on the current rendering target.
 
 
 == Syntax ==
 ```c++
-int SDL_RenderPoints(const SDL_Point* points,
-                     int              count)
+int SDL_RenderDrawPoints(const SDL_Point* points,
+                         int              count)
 ```
 
 == Function Parameters ==
@@ -35,11 +35,11 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_RenderLine]]???
-:[[SDL_RenderLines]]???
-:[[SDL_RenderPoint]]???
-:[[SDL_RenderRect]]???
-:[[SDL_RenderRects]]???
+:[[SDL_RenderDrawLine]]???
+:[[SDL_RenderDrawLines]]???
+:[[SDL_RenderDrawPoint]]???
+:[[SDL_RenderDrawRect]]???
+:[[SDL_RenderDrawRects]]???
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
